style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  height: 100vh;

  color: #fff;
  background: url(https://images.unsplash.com/photo-1509365465985-25d11c17e812?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80);
  background-size: 2100px auto;
  background-repeat: no-repeat;
  background-position: center center;
  /* filter: brightness(40%); */
  backdrop-filter: brightness(40%);
  -webkit-backdrop-filter: brightness(40%);
  -moz-backdrop-filter: brightness(40%);

  transition: background 0.2s linear;
}

.hidden {
  display: none;
}

#content-home,
#content-menu,
#content-about {
  z-index: -1;
  height: 100%;
  min-width: 100vw;
}

.header {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 11vh;
  border-bottom: 2px solid salmon;
}

.nav {
  display: flex;
  align-items: center;
  justify-content: center;
  list-style: none;
  gap: 48px;
  font-weight: 500;
  font-size: 20px;
  height: 100%;
}

.li {
  text-decoration: none;
  color: #fff;
  font-family: "Alex Brush", cursive;
  font-size: 32px;
}

.li:hover {
  cursor: pointer;
  border-bottom: 1px solid salmon;
  color: salmon;
}
.li:active {
  transform: scale(0.97);
}

.current-li {
  border-bottom: 1px solid salmon;
  color: salmon;
}

/* MAIN SECTION */

.main {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 78vh;
  border-bottom: 2px solid salmon;
  padding-top: 12px;
}

.main-inner {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  height: 100%;
}

.cursive-text {
  font-size: 88px;
  font-family: "Alex Brush", cursive;
  color: salmon;
}

.big-text {
  display: flex;
  flex-direction: column;
  align-items: center;

  line-height: 0.7;
  color: rgb(251, 244, 244);
}

.big-text {
  font-size: 78px;
  margin-bottom: 20px;
  color: rgb(251, 244, 244);
}

.border-line {
  width: 17rem;
  height: 3px;
  background-color: salmon;
}

.main-subtext {
  margin-top: 38px;
  font-size: 24px;
  font-family: "Josefin Slab", serif;
  font-weight: 600;
}

.main-button {
  display: flex;
  justify-content: center;
  align-items: center;

  background: salmon;
  color: rgb(251, 244, 244);

  margin-top: 3rem;
  padding: 12px 16px;
  font-family: "Courgette", cursive;
  word-spacing: 1px;

  font-size: 20px;
  border: none;
  box-shadow: 0.2px 1px 4px 0.2px rgb(42, 41, 41);
}

.main-button:hover {
  cursor: pointer;
  color: rgb(25, 25, 33);
  /* text-shadow: 1px 1px 8px 1px rgb(251, 244, 244); */
}

.main-button:active {
  cursor: pointer;
  transform: scale(0.97);
}

/* FOOTER SECTION */
.footer {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 11vh;
  color: rgb(251, 244, 244);
}

/**********************************/
/*********** Menu Page ************/
/**********************************/

.main-menu {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 78vh;
  border-bottom: 2px solid salmon;
}

.menu-card {
  background: #e0e0e0;
  border-radius: 8px;
  border: 2px solid salmon;

  width: 500px;
  height: 92%;
  overflow: scroll;
  padding-left: 28px;
  padding-right: 28px;
}

.menu-heading {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  position: relative;
}

.welcome {
  color: salmon;
  font-family: "Alex Brush", cursive;
  font-size: 74px;
}

.welcome-menu {
  color: rgb(2, 32, 45);
  font-weight: bold;
  font-size: 76px;
  position: absolute;
  top: 50%;
  left: 28%;
}

.welcome-menu-border {
  position: relative;
  top: 10.5%;
  left: 20%;
  width: 16rem;
  height: 4px;
  background-color: salmon;
}

.menu-items {
  text-decoration: none;

  font-weight: bold;

  justify-content: center;
  align-items: center;
  margin-top: 4.3rem;
  height: 1780px;

  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  text-align: center;
}

.menu-li {
  color: salmon;
  list-style-type: none;
  font-size: 32px;
  font-family: "Alex Brush", cursive;
  font-weight: bold;
  margin-bottom: 12px;
}

.menu-p {
  margin-top: 14px;
  margin-bottom: 16px;
  line-height: 1.4;
  text-shadow: 2px 2px 8px 2px rgb(39, 39, 39);
  color: rgb(2, 32, 45);

  font-size: 18px;

  font-family: "Josefin Slab", serif;
  font-weight: 600;
}

.menu-price {
  color: salmon;
  margin-top: 8px;
  margin-bottom: 8px;
  font-size: 22px;
  font-weight: bold;
}

/* .li-border-line {
  position: relative;

  width: 14rem;
  height: 2px;
  background-color: salmon;
} */

/**********************************/
/*********** About Page ************/
/**********************************/

.menu-container {
  height: 100%;
  min-width: 100vw;
  background-color: #e0e0e0;

  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

.about-section {
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
}

.about-section::-webkit-scrollbar {
  display: none;
}

.about-heading {
  height: 170px;
  /* border-bottom: red 2px solid; */
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
}

.about-welcome {
  color: salmon;
  font-family: "Alex Brush", cursive;
  font-size: 74px;
  margin-top: 16px;
  text-align: center;
}

.our-story {
  /* border: solid 1px red; */
  width: 500px;
  color: rgb(2, 32, 45);
  font-weight: bold;
  text-align: center;

  font-size: 66px;
  /* padding-left: 10rem; */
  position: absolute;
  top: 38%;

  /* translate: -50%; */
}

/* .about-border {
  position: fixed;
  top: 34%;
  left: 38%;

  width: 16rem;
  height: 4px;
  background-color: salmon;
} */

.about-imgs-container {
  margin-top: 16px;
  height: 550px;
  width: 100%;
  display: flex;
  justify-content: center;
  /* border: solid 1px red; */
}

.about-img-1 {
  /* border: 2px solid salmon; */
  outline: none;
  border-radius: 2px;
  box-shadow: 0px 1px 8px 1px rgb(25, 25, 33);
  display: flex;
  justify-content: center;
  width: 800px;
  height: 500px;

  background-image: url("img/dessert-display.avif");
  background-size: cover;
  background-position: right;
}

.our-story-text {
  margin: 0 auto;
  color: rgb(2, 32, 45);
  border-top: 1px solid salmon;
  border-bottom: 1px solid salmon;

  font-family: "Josefin Slab", serif;
  font-weight: 700;

  line-height: 2;
  letter-spacing: 0.01px;
  width: 680px;
  text-align: center;

  margin-bottom: 3rem;
  padding: 8px 16px;
}

/* Images */
.img-1 {
  background-image: url(img/cherry-cake.avif);
  background-size: cover;
  background-repeat: no-repeat;
  /* background-position: bottom center; */
  background-position-y: 85%;
  height: 148px;
  width: 178px;

  border-radius: 4px;
  border: 1px solid salmon;
}

.img-2 {
  background-image: url(img/blueberry-pie.avif);
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: 65%;
  height: 148px;
  width: 178px;

  border-radius: 4px;
  border: 1px solid salmon;
}

.img-3 {
  background-image: url(img/churros-fresas.avif);
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: 45%;
  height: 148px;
  width: 178px;

  border-radius: 4px;
  border: 1px solid salmon;
}

.img-4 {
  background-image: url(img/little-cake.avif);
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: 80%;

  height: 148px;
  width: 178px;

  border-radius: 4px;
  border: 1px solid salmon;
}

/* item 1 */

.item-div {
  height: 385px;
  margin-bottom: 24px;
  width: 70%;

  border-bottom: 2px solid salmon;
}

@media (max-width: 1200px) {
  body {
    background-size: 1200px auto;
  }

  .menu-card {
    width: 400px;
  }

  .welcome-menu {
    font-size: 76px;

    top: 50%;
    left: 22%;
  }

  .welcome-menu-border {
    width: 13rem;
  }
}

/* Tablets and under */
@media (max-width: 650px) {
  body {
    height: 100%;
    width: 100vw;
  }

  /* Home Section */
  .cursive-text {
    font-size: 62px;
  }

  .big-text {
    font-size: 50px;
    margin-bottom: 26px;
  }

  .main-subtext {
    width: 250px;
    margin-top: 48px;
    text-align: center;
  }

  /* Menu Section */
  .welcome {
    font-size: 54px;
  }

  .welcome-menu {
    font-size: 52px;
    padding-left: 1.6rem;
  }

  .menu-card {
    width: 320px;
    height: 82%;
  }

  .welcome-menu {
    top: 50%;
    left: 16%;
  }

  .welcome-menu-border {
    top: 7.5%;
    left: 16.5%;
    width: 11rem;
    height: 3px;
  }

  .item-div {
    height: 450px;
    border-bottom: none;
  }

  .menu-price {
    padding: 0px 16px 8px 12px;
    border-bottom: solid 1px salmon;
  }
}

@media (max-width: 795px) {
  /* About section */
  .about-welcome {
  }

  .our-story {
    /* border: solid 1px red; */
    width: 405px;

    font-size: 56px;

    /* top: 38%; */
  }

  .about-img-1 {
    width: 400px;
    height: 500px;
  }

  .about-section {
    width: 100vw;
  }

  .our-story-text {
    width: 300px;
  }
}

/* Controlling size of the background image  */

@media (max-width: 1600px) {
  body {
    background-size: 1600px auto;
  }
}

@media (max-width: 650px) {
  body {
    background-size: auto;
  }
}

